--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/brfavicon.ico">
+    <!-- <link rel="icon" href="/brfavicon.ico"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>北京中动华科信息技术有限公司</title>
   </head>
